--- a/ZamTour/Base.lproj/Main.storyboard
+++ b/ZamTour/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -440,31 +441,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="D9i-y1-uvz">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="D9i-y1-uvz">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="i1K-HO-WAd">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="NrE-C1-a2P" id="2vj-jf-UVU"/>
+                                    </connections>
+                                </searchBar>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFit" selectionStyle="default" indentationWidth="10" reuseIdentifier="miCelda" rowHeight="257" id="Iz7-x9-TMt" customClass="TVCMonumentsCell" customModule="ZamTour" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="257"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFit" selectionStyle="default" indentationWidth="10" reuseIdentifier="miCelda2" rowHeight="323" id="Iz7-x9-TMt" customClass="TVCMonumentsCell" customModule="ZamTour" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="72" width="375" height="323"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Iz7-x9-TMt" id="IRF-dm-asU">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="256.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="322.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gau-oo-XhL">
-                                                    <rect key="frame" x="20" y="0.0" width="141" height="107"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VyA-0S-7N7">
-                                                    <rect key="frame" x="169" y="11" width="193" height="68"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VyA-0S-7N7">
+                                                    <rect key="frame" x="20" y="196" width="335" height="126.5"/>
+                                                    <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="tintColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gau-oo-XhL">
+                                                    <rect key="frame" x="52" y="8" width="284" height="184"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="184" id="hux-2T-lgZ"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="VyA-0S-7N7" firstAttribute="top" secondItem="gau-oo-XhL" secondAttribute="bottom" constant="4" id="AEC-ae-hwk"/>
+                                                <constraint firstItem="VyA-0S-7N7" firstAttribute="leading" secondItem="IRF-dm-asU" secondAttribute="leading" constant="20" symbolic="YES" id="FfJ-mK-qaf"/>
+                                                <constraint firstAttribute="trailing" secondItem="VyA-0S-7N7" secondAttribute="trailing" constant="20" symbolic="YES" id="HdW-CO-KxN"/>
+                                                <constraint firstAttribute="bottom" secondItem="VyA-0S-7N7" secondAttribute="bottom" id="WJQ-BW-25O"/>
+                                                <constraint firstItem="gau-oo-XhL" firstAttribute="top" secondItem="IRF-dm-asU" secondAttribute="topMargin" id="cI5-KX-d2z"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="gau-oo-XhL" secondAttribute="trailing" constant="31" id="jSK-zY-bdH"/>
+                                                <constraint firstItem="gau-oo-XhL" firstAttribute="top" secondItem="IRF-dm-asU" secondAttribute="topMargin" id="jqu-qN-uU5"/>
+                                                <constraint firstItem="gau-oo-XhL" firstAttribute="leading" secondItem="IRF-dm-asU" secondAttribute="leadingMargin" constant="44" id="n04-SH-tZi"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.1581002772" green="0.67548054459999995" blue="0.39421683549999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="tintColor" red="0.15810027718544006" green="0.67548054456710815" blue="0.39421683549880981" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <outlet property="imgMonument" destination="gau-oo-XhL" id="1cZ-Vz-F6t"/>
                                             <outlet property="lblNombreMonumento" destination="VyA-0S-7N7" id="XKS-rz-3HY"/>
@@ -473,16 +496,33 @@
                                 </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="NrE-C1-a2P" id="2B2-c9-LkQ"/>
+                                    <outlet property="delegate" destination="NrE-C1-a2P" id="JeI-hn-JP4"/>
                                 </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="0.33333333333333331" green="0.66666666666666663" blue="0.41960784313725491" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="D9i-y1-uvz" firstAttribute="top" secondItem="eeP-qq-sFF" secondAttribute="top" id="87h-Zf-ZdX"/>
+                            <constraint firstItem="D9i-y1-uvz" firstAttribute="leading" secondItem="eeP-qq-sFF" secondAttribute="leading" id="9t5-2P-rSJ"/>
+                            <constraint firstAttribute="trailing" secondItem="D9i-y1-uvz" secondAttribute="trailing" id="RzU-Bs-MI8"/>
+                            <constraint firstItem="sGj-Mv-nGv" firstAttribute="top" secondItem="D9i-y1-uvz" secondAttribute="bottom" id="UbO-Yj-c9k"/>
+                        </constraints>
                     </view>
                     <connections>
+                        <outlet property="searchDisplayController" destination="fxM-2V-MrP" id="wsf-cg-7u7"/>
                         <outlet property="tbMiTable" destination="D9i-y1-uvz" id="JZp-Jf-7Dh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4EN-xN-Au0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="fxM-2V-MrP">
+                    <connections>
+                        <outlet property="delegate" destination="NrE-C1-a2P" id="i9j-1T-brr"/>
+                        <outlet property="searchBar" destination="i1K-HO-WAd" id="hYV-6o-FKO"/>
+                        <outlet property="searchContentsController" destination="NrE-C1-a2P" id="sA4-G8-9wb"/>
+                        <outlet property="searchResultsDataSource" destination="NrE-C1-a2P" id="Dz5-0A-pnn"/>
+                        <outlet property="searchResultsDelegate" destination="NrE-C1-a2P" id="LtD-Gz-EWj"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="2855.1999999999998" y="119.1904047976012"/>
         </scene>
