--- a/ZamTour/Base.lproj/Main.storyboard
+++ b/ZamTour/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="NrE-C1-a2P">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -432,6 +432,8 @@
         <!--Monuments-->
         <scene sceneID="hcg-26-ozX">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4EN-xN-Au0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="fxM-2V-MrP"/>
                 <viewController storyboardIdentifier="BlueViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="NrE-C1-a2P" customClass="VCMonuments" customModule="ZamTour" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="52A-gO-PNy"/>
@@ -444,45 +446,46 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="D9i-y1-uvz">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <searchBar key="tableHeaderView" contentMode="redraw" id="i1K-HO-WAd">
+                                <searchBar key="tableHeaderView" contentMode="redraw" text="" id="hkf-iT-4Fc">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
-                                        <outlet property="delegate" destination="NrE-C1-a2P" id="2vj-jf-UVU"/>
+                                        <outlet property="delegate" destination="NrE-C1-a2P" id="gRD-tS-Qd8"/>
                                     </connections>
                                 </searchBar>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFit" selectionStyle="default" indentationWidth="10" reuseIdentifier="miCelda2" rowHeight="323" id="Iz7-x9-TMt" customClass="TVCMonumentsCell" customModule="ZamTour" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="72" width="375" height="323"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFit" selectionStyle="default" indentationWidth="10" reuseIdentifier="miCelda2" rowHeight="260" id="Iz7-x9-TMt" customClass="TVCMonumentsCell" customModule="ZamTour" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="72" width="375" height="260"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Iz7-x9-TMt" id="IRF-dm-asU">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="322.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="259.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VyA-0S-7N7">
-                                                    <rect key="frame" x="20" y="279" width="335" height="44"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gau-oo-XhL">
+                                                    <rect key="frame" x="52" y="8" width="284" height="184.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="184" id="hux-2T-lgZ"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VyA-0S-7N7">
+                                                    <rect key="frame" x="27" y="200" width="335" height="44"/>
                                                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <color key="tintColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gau-oo-XhL">
-                                                    <rect key="frame" x="52" y="8" width="284" height="184"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="184" id="hux-2T-lgZ"/>
-                                                    </constraints>
-                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="VyA-0S-7N7" firstAttribute="leading" secondItem="IRF-dm-asU" secondAttribute="leading" constant="20" symbolic="YES" id="FfJ-mK-qaf"/>
-                                                <constraint firstAttribute="trailing" secondItem="VyA-0S-7N7" secondAttribute="trailing" constant="20" symbolic="YES" id="HdW-CO-KxN"/>
-                                                <constraint firstAttribute="bottom" secondItem="VyA-0S-7N7" secondAttribute="bottom" id="WJQ-BW-25O"/>
+                                                <constraint firstItem="VyA-0S-7N7" firstAttribute="top" secondItem="gau-oo-XhL" secondAttribute="bottom" constant="8" symbolic="YES" id="0ga-Gy-LQQ"/>
+                                                <constraint firstAttribute="trailing" secondItem="VyA-0S-7N7" secondAttribute="trailing" constant="13" id="HdW-CO-KxN"/>
                                                 <constraint firstItem="gau-oo-XhL" firstAttribute="top" secondItem="IRF-dm-asU" secondAttribute="topMargin" id="cI5-KX-d2z"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="gau-oo-XhL" secondAttribute="trailing" constant="31" id="jSK-zY-bdH"/>
                                                 <constraint firstItem="gau-oo-XhL" firstAttribute="top" secondItem="IRF-dm-asU" secondAttribute="topMargin" id="jqu-qN-uU5"/>
                                                 <constraint firstItem="gau-oo-XhL" firstAttribute="leading" secondItem="IRF-dm-asU" secondAttribute="leadingMargin" constant="44" id="n04-SH-tZi"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="VyA-0S-7N7" secondAttribute="bottom" constant="7.5" id="xG0-of-JiR"/>
+                                                <constraint firstItem="VyA-0S-7N7" firstAttribute="centerX" secondItem="gau-oo-XhL" secondAttribute="centerX" id="xiP-oy-Pfw"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.1581002772" green="0.67548054459999995" blue="0.39421683549999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -508,20 +511,10 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="searchDisplayController" destination="fxM-2V-MrP" id="wsf-cg-7u7"/>
+                        <outlet property="searchBar" destination="hkf-iT-4Fc" id="0nf-iu-Stj"/>
                         <outlet property="tbMiTable" destination="D9i-y1-uvz" id="JZp-Jf-7Dh"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4EN-xN-Au0" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="fxM-2V-MrP">
-                    <connections>
-                        <outlet property="delegate" destination="NrE-C1-a2P" id="i9j-1T-brr"/>
-                        <outlet property="searchBar" destination="i1K-HO-WAd" id="hYV-6o-FKO"/>
-                        <outlet property="searchContentsController" destination="NrE-C1-a2P" id="sA4-G8-9wb"/>
-                        <outlet property="searchResultsDataSource" destination="NrE-C1-a2P" id="Dz5-0A-pnn"/>
-                        <outlet property="searchResultsDelegate" destination="NrE-C1-a2P" id="LtD-Gz-EWj"/>
-                    </connections>
-                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="2855.1999999999998" y="119.1904047976012"/>
         </scene>
@@ -780,6 +773,7 @@
         <image name="logo-1" width="205" height="198"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="V6J-HK-9w2"/>
         <segue reference="GMG-DU-0J4"/>
         <segue reference="g4Z-Qk-GEV"/>
         <segue reference="Qd1-Qb-u7g"/>
