ZamTour está vivo

--- a/ZamTour/Base.lproj/Main.storyboard
+++ b/ZamTour/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="NrE-C1-a2P">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -319,15 +319,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fzM-SD-pZY">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="16" y="20" width="343" height="312"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RE5-M2-oxp">
+                                <rect key="frame" x="164" y="587" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="siguientePag:" destination="Uf7-rf-Wxl" eventType="touchUpInside" id="OZ3-Qi-qpG"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.33333333333333331" green="0.66666666666666663" blue="0.41960784313725491" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="tintColor" red="0.074727588189999999" green="0.5" blue="0.33258929520000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
                     <connections>
+                        <outlet property="btnsig" destination="RE5-M2-oxp" id="Gma-He-lkH"/>
                         <outlet property="viewMain" destination="fzM-SD-pZY" id="EqK-BP-B5k"/>
                         <segue destination="FBb-j1-vh4" kind="show" identifier="viewOfer" id="GMG-DU-0J4"/>
                     </connections>
@@ -353,11 +362,11 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fNp-JI-h1u">
-                                <rect key="frame" x="189" y="510" width="113" height="30"/>
+                                <rect key="frame" x="131" y="511" width="113" height="53"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="volver"/>
                                 <connections>
-                                    <segue destination="Uf7-rf-Wxl" kind="show" id="VzP-k6-cq7"/>
+                                    <segue destination="Uta-3t-YFL" kind="show" id="EZ9-Sa-sWR"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -384,7 +393,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hag-fG-4gN">
-                                <rect key="frame" x="16" y="179" width="343" height="437"/>
+                                <rect key="frame" x="16" y="28" width="343" height="437"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="y7m-TU-4Bj">
@@ -432,8 +441,6 @@
         <!--Monuments-->
         <scene sceneID="hcg-26-ozX">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4EN-xN-Au0" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="fxM-2V-MrP"/>
                 <viewController storyboardIdentifier="BlueViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="NrE-C1-a2P" customClass="VCMonuments" customModule="ZamTour" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="52A-gO-PNy"/>
@@ -463,13 +470,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gau-oo-XhL">
-                                                    <rect key="frame" x="52" y="8" width="284" height="184.5"/>
+                                                    <rect key="frame" x="59" y="11" width="270" height="184.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="184" id="hux-2T-lgZ"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VyA-0S-7N7">
-                                                    <rect key="frame" x="27" y="200" width="335" height="44"/>
+                                                    <rect key="frame" x="27" y="203" width="335" height="38.5"/>
                                                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <color key="tintColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -515,6 +522,8 @@
                         <outlet property="tbMiTable" destination="D9i-y1-uvz" id="JZp-Jf-7Dh"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4EN-xN-Au0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="fxM-2V-MrP"/>
             </objects>
             <point key="canvasLocation" x="2855.1999999999998" y="119.1904047976012"/>
         </scene>
@@ -773,9 +782,7 @@
         <image name="logo-1" width="205" height="198"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="V6J-HK-9w2"/>
-        <segue reference="GMG-DU-0J4"/>
-        <segue reference="g4Z-Qk-GEV"/>
+        <segue reference="EZ9-Sa-sWR"/>
         <segue reference="Qd1-Qb-u7g"/>
     </inferredMetricsTieBreakers>
 </document>
